fix: faqs question legibility in dark mode

--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -37,6 +37,11 @@
   margin-bottom: 0;
   padding: 0;
   font-size: 1.08rem;
+  color: #303030;
+}
+
+.dark #faqs > h3{
+  color: white;
 }
 
 #faqs > p, #faqs > ul{
